--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.atlassian.cpji</groupId>
     <artifactId>cpji-jira-plugin</artifactId>
-    <version>2.1-beta1</version>
+    <version>2.1-SNAPSHOT</version>
 
     <organization>
         <name>Atlassian</name>
