--- a/pom.xml
+++ b/pom.xml
@@ -2,138 +2,38 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.atlassian.pom</groupId>
         <artifactId>atlassian-public-pom</artifactId>
         <version>22</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
     <groupId>com.atlassian.cpji</groupId>
-    <artifactId>cpji-jira-plugin</artifactId>
+    <artifactId>cpji-jira</artifactId>
     <version>2.1-SNAPSHOT</version>
+    <name>Remote copying of issues - Parent POM</name>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>cpji-jira-plugin</module>
+        <module>cpji-jira-plugin-test</module>
+    </modules>
 
     <organization>
         <name>Atlassian</name>
         <url>http://www.atlassian.com</url>
     </organization>
 
-    <profiles>
-        <profile>
-            <id>jira1</id>
-            <properties>
-                <cpji.build.directory>${basedir}/target_jira1</cpji.build.directory>
-                <http.port>5990</http.port>
-                <jvm.debug.port>5002</jvm.debug.port>
-                <cli.port>1234</cli.port>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira2</id>
-            <properties>
-                <cpji.build.directory>${basedir}/target_jira2</cpji.build.directory>
-                <http.port>5991</http.port>
-                <jvm.debug.port>5003</jvm.debug.port>
-                <cli.port>5678</cli.port>
-            </properties>
-        </profile>
-    </profiles>
-
-    <name>Remote copying of issues (cpji-jira-plugin)</name>
-    <description>Plugin that copies issues from one JIRA instance to another</description>
-    <packaging>atlassian-plugin</packaging>
-
     <dependencies>
-        <dependency>
-            <groupId>com.atlassian.jira</groupId>
-            <artifactId>jira-core</artifactId>
-            <version>${jira.compile.version}</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.6</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.atlassian.selenium</groupId>
-            <artifactId>atlassian-selenium</artifactId>
-            <version>2.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- REST dependencies-->
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-            <version>1.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.plugins.rest</groupId>
-            <artifactId>atlassian-rest-common</artifactId>
-            <version>${rest.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.plugins.rest</groupId>
-            <artifactId>atlassian-rest-module</artifactId>
-            <version>${rest.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- UAL dependencies -->
-        <dependency>
-            <groupId>com.atlassian.applinks</groupId>
-            <artifactId>applinks-api</artifactId>
-            <version>${applinks.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.sal</groupId>
-            <artifactId>sal-api</artifactId>
-            <version>${my.sal.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
     </dependencies>
-
-    <build>
-        <directory>${cpji.build.directory}</directory>
-        <plugins>
-            <plugin>
-                <groupId>com.atlassian.maven.plugins</groupId>
-                <artifactId>maven-jira-plugin</artifactId>
-                <version>3.3</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <productVersion>${jira.version}</productVersion>
-                    <productDataVersion>${jira.data.version}</productDataVersion>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <properties>
         <jira.version>5.0-alpha4</jira.version>
@@ -142,6 +42,7 @@
         <my.sal.version>2.6.1</my.sal.version>
         <rest.version>2.5.0</rest.version>
         <applinks.version>3.5.6</applinks.version>
+        <atlassian.selenium.version>2.0</atlassian.selenium.version>
         <cpji.build.directory>target</cpji.build.directory>
     </properties>
 
