Add remote issue links between source and issue copy.

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -15,3 +15,7 @@ cpji.field.names.votes=Voters
 cpji.error.no.permission=You don't have the permission for this operation.
 cpji.project.role=Project Role {0}
 cpji.group=Group {0}
+cpji.remote.link.reciprocal=Both directions
+cpji.remote.link.incoming=From copy to original issue
+cpji.remote.link.outgoing=From original to copy
+cpji.remote.link.nolink=None
