Added configurable user mapping.

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -15,6 +15,9 @@ cpji.field.names.votes=Voters
 cpji.error.no.permission=You don't have the permission for this operation.
 cpji.project.role=Project Role {0}
 cpji.group=Group {0}
+usermapping.username=By user name
+usermapping.email=By email
+usermapping.email.and.username=By email AND user name
 cpji.remote.link.reciprocal=Both directions
 cpji.remote.link.incoming=From copy to original issue
 cpji.remote.link.outgoing=From original to copy
