--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>cpji-jira</artifactId>
         <groupId>com.atlassian.cpji</groupId>
-        <version>2.1-beta1</version>
+        <version>2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>cpji-jira-plugin</artifactId>
