CPJI-21: UI Improvements to configuration UI.

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -22,3 +22,7 @@ cpji.remote.link.reciprocal=Both directions
 cpji.remote.link.incoming=From copy to original issue
 cpji.remote.link.outgoing=From original to copy
 cpji.remote.link.nolink=None
+cpji.config.default.value=Saved default value for field ''{0}''
+cpji.config.default.empty.value=Deleted default value for field ''{0}''
+cpji.config.user.mapping=Saved user mapping configuration.
+
