CPJI-7: Support mapping of time tracking fields (estimated, remaining, logged). Retain original and remaining estimate.

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -25,4 +25,6 @@ cpji.remote.link.nolink=None
 cpji.config.default.value=Saved default value for field ''{0}''
 cpji.config.default.empty.value=Deleted default value for field ''{0}''
 cpji.config.user.mapping=Saved user mapping configuration.
+cpji.config.user.group=Saved user group restriction.
+cpji.config.user.group.remove=Removed user group restriction.
 
