updated list of ignored files

--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>cpji-jira</artifactId>
         <groupId>com.atlassian.cpji</groupId>
         <version>2.1-SNAPSHOT</version>
     </parent>
-
     <artifactId>cpji-jira-plugin-test</artifactId>
     <name>Remote copying of issues - Integration Tests</name>
     <description>Tests for copying issues between remote JIRA instances</description>
-
     <dependencies>
         <dependency>
             <groupId>com.atlassian.cpji</groupId>
@@ -20,28 +17,24 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.atlassian.selenium</groupId>
             <artifactId>atlassian-pageobjects-api</artifactId>
             <version>${atlassian.selenium.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.atlassian.selenium</groupId>
             <artifactId>atlassian-webdriver-jira</artifactId>
             <version>${atlassian.selenium.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>atlassian-jira-pageobjects</artifactId>
             <version>${jira.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-selenium-tests</artifactId>
@@ -49,19 +42,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>maven-amps-plugin</artifactId>
-                <version>3.5-m8</version>
+                <version>${amps.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <systemPropertyVariables>
                         <xvfb.enable>${xvfb.enable}</xvfb.enable>
                     </systemPropertyVariables>
-
                     <products>
                         <product>
                             <id>jira</id>
@@ -91,7 +82,6 @@
                             </pluginArtifacts>
                         </product>
                     </products>
-
                     <testGroups>
                         <testGroup>
                             <id>jira-tests</id>
@@ -116,10 +106,9 @@
             </plugin>
         </plugins>
     </build>
-
     <properties>
         <!-- Whether the tests should be run detached from the current screen -->
         <xvfb.enable>true</xvfb.enable>
+        <amps.version>4.0</amps.version>
     </properties>
- 
 </project>
