--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,133 @@
         </dependency>
     </dependencies>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.atlassian.selenium</groupId>
+				<artifactId>atlassian-pageobjects-api</artifactId>
+				<version>${atlassian.selenium.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.selenium</groupId>
+				<artifactId>atlassian-webdriver-jira</artifactId>
+				<version>${atlassian.selenium.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.jira</groupId>
+				<artifactId>atlassian-jira-pageobjects</artifactId>
+				<version>${jira.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.jira</groupId>
+				<artifactId>jira-selenium-tests</artifactId>
+				<version>${jira.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.jira</groupId>
+				<artifactId>jira-core</artifactId>
+				<version>${jira.compile.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.selenium</groupId>
+				<artifactId>atlassian-selenium</artifactId>
+				<version>2.0</version>
+				<scope>test</scope>
+			</dependency>
+
+			<!-- REST dependencies-->
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.1</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>jsr250-api</artifactId>
+				<version>1.0</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.plugins.rest</groupId>
+				<artifactId>atlassian-rest-common</artifactId>
+				<version>${rest.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.plugins.rest</groupId>
+				<artifactId>atlassian-rest-module</artifactId>
+				<version>${rest.version}</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<!-- Remote Issue Links dependencies -->
+			<!-- TODO, once a newer version of 5.0 is released (e.g. beta3), change this dependency to the jira-view-issue-plugin -->
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.0</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>2.4</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<!-- UAL dependencies -->
+			<dependency>
+				<groupId>com.atlassian.applinks</groupId>
+				<artifactId>applinks-api</artifactId>
+				<version>${applinks.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.sal</groupId>
+				<artifactId>sal-api</artifactId>
+				<version>${my.sal.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.5</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.15</version>
+				<scope>provided</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>javax.jms</groupId>
+						<artifactId>jms</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.jdmk</groupId>
+						<artifactId>jmxtools</artifactId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jmxri</artifactId>
+						<groupId>com.sun.jmx</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
     <properties>
-        <jira.version>5.0-beta3</jira.version>
-        <jira.compile.version>5.0-beta3</jira.compile.version>
-        <jira.data.version>4.1.1</jira.data.version>
+        <jira.version>5.0</jira.version>
+        <jira.compile.version>5.0</jira.compile.version>
+        <jira.data.version>${jira.version}</jira.data.version>
         <my.sal.version>2.6.1</my.sal.version>
         <rest.version>2.5.0</rest.version>
         <applinks.version>3.5.6</applinks.version>
