--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -25,6 +25,12 @@
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-webdriver-tests</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.2</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
