--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -12,12 +12,6 @@
     <description>Tests for copying issues between remote JIRA instances</description>
     <dependencies>
         <dependency>
-            <groupId>com.atlassian.cpji</groupId>
-            <artifactId>cpji-jira-plugin</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>atlassian-jira-pageobjects</artifactId>
         </dependency>
@@ -109,5 +103,52 @@
     <properties>
         <!-- Whether the tests should be run detached from the current screen -->
         <xvfb.enable>true</xvfb.enable>
+		<tested-plugin.jar>${basedir}/../cpji-jira-plugin/target/cpji-jira-plugin-${project.version}.jar</tested-plugin.jar>
     </properties>
+	<profiles>
+		<profile>
+			<id>artifact-passing</id>
+			<activation>
+				<file>
+					<exists>PassedArtifacts/cpji-jira-plugin-${project.version}.jar</exists>
+				</file>
+			</activation>
+			<properties>
+				<tested-plugin.jar>${basedir}/PassedArtifacts/cpji-jira-plugin-${project.version}.jar</tested-plugin.jar>
+			</properties>
+		</profile>
+		<profile>
+			<id>use-tested-plugin-from-local-file</id>
+			<activation>
+				<file>
+					<exists>${tested-plugin.jar}</exists>
+				</file>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>${project.groupId}</groupId>
+					<artifactId>cpji-jira-plugin</artifactId>
+					<version>${project.version}</version>
+					<scope>system</scope>
+					<systemPath>${tested-plugin.jar}</systemPath>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>use-tested-plugin-from-repository</id>
+			<activation>
+				<file>
+					<missing>${tested-plugin.jar}</missing>
+				</file>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>${project.groupId}</groupId>
+					<artifactId>cpji-jira-plugin</artifactId>
+					<version>${project.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
