--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,22 @@
 				<configuration>
 					<preparationGoals>clean test</preparationGoals>
 					<releaseProfiles>releaseProfile</releaseProfiles>
+					<!--allowTimestampedSnapshots>true</allowTimestampedSnapshots-->
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.atlassian.maven.plugins</groupId>
+				<artifactId>sandbox-maven-plugin</artifactId>
+				<version>2.0.1</version>
+				<executions>
+					<execution>
+						<id>enable-sandbox</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>sandbox</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
