--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -27,4 +27,4 @@ cpji.config.default.empty.value=Deleted default value for field ''{0}''
 cpji.config.user.mapping=Saved user mapping configuration.
 cpji.config.user.group=Saved user group restriction.
 cpji.config.user.group.remove=Removed user group restriction.
-
+cpji.select.destination.project=Select destination project
