--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,21 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>com.atlassian.jira</groupId>
+				<artifactId>jira-rest-java-client</artifactId>
+				<version>0.6-m10</version>
+			</dependency>
+			<dependency>
+				<groupId>com.atlassian.fugue</groupId>
+				<artifactId>fugue</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.findbugs</groupId>
+				<artifactId>jsr305</artifactId>
+				<version>2.0.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
