--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
 			<dependency>
 				<groupId>com.atlassian.fugue</groupId>
 				<artifactId>fugue</artifactId>
-				<version>1.1</version>
+				<version>1.1-pniewiadomski-1</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
