--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -102,7 +102,7 @@
             <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>maven-amps-plugin</artifactId>
-                <version>3.5-m8</version>
+                <version>${amps.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <products>
