--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
 				<artifactId>jsr305</artifactId>
 				<version>2.0.0</version>
 			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey</groupId>
+				<artifactId>jersey-core</artifactId>
+				<version>${jersey.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -219,17 +224,19 @@
 	</build>
 
     <properties>
+		<jdkLevel>1.6</jdkLevel>
+		<cpji.build.directory>target</cpji.build.directory>
+
         <jira.version>6.0-SNAPSHOT</jira.version>
         <jira.compile.version>6.0-SNAPSHOT</jira.compile.version>
         <jira.data.version>${jira.version}</jira.data.version>
         <my.sal.version>2.6.1</my.sal.version>
-        <rest.version>2.5.0</rest.version>
+        <rest.version>2.7.1</rest.version>
         <applinks.version>3.5.6</applinks.version>
-        <cpji.build.directory>target</cpji.build.directory>
 		<testkit.version>5.0-m13</testkit.version>
 		<amps.version>4.0</amps.version>
-		<jdkLevel>1.6</jdkLevel>
 		<atlassian.selenium.version>2.1-m18</atlassian.selenium.version>
+		<jersey.version>1.8-atlassian-6</jersey.version>
     </properties>
 
 	<profiles>
