JRADEV-16147 Updated text on Project Admin page

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -1,5 +1,6 @@
 issue.operations.copy.to.other.instance=Remote Copy
 issue.operations.simple.copy=Remote Copy
+cpji.admin.general.name=Remote Issue Copy
 cpji.field.validation.ok=This field will be copied across and the field value(s) will be retained.
 cpji.field.validation.field.not.mapped=This field does not exist in the target project and cannot be copied.
 cpji.field.validation.value.not.mapped=Field value(s) for this field could not be mapped to valid values in the target project.
