JRADEV-16146 - presenting RIC settings as a dialog

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/cpji.properties
@@ -1,6 +1,18 @@
 issue.operations.copy.to.other.instance=Remote Copy
 issue.operations.simple.copy=Remote Copy
-cpji.admin.general.name=Remote Issue Copy
+cpji.admin.name=Remote Issue Copy
+cpji.admin.title=Configure Remote Issue Copy
+cpji.admin.successful.saved=You have successfuly saved settings
+cpji.admin.there.were.problems=There were some problems when saving the configuration.
+
+cpji.admin.fields.group.name=User group
+cpji.admin.fields.group.description=Only users of this group can copy to another JIRA project.
+cpji.admin.fields.group.everyone=everyone
+cpji.admin.fields.usermapping.name=User Mapping
+cpji.admin.fields.usermapping.description=Users from the remote JIRA instance are mapped by using the selected mapping type. This user mapping is used when copying field values of the assignee, comment, reporter, voter and watcher field.
+
+cpji.admin.default.values=These default values will be applied if the remote issue does not contain a value.
+
 cpji.field.validation.ok=This field will be copied across and the field value(s) will be retained.
 cpji.field.validation.field.not.mapped=This field does not exist in the target project and cannot be copied.
 cpji.field.validation.value.not.mapped=Field value(s) for this field could not be mapped to valid values in the target project.
